--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,15 +17,19 @@ body {
   display: block;
   place-items: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background-color: #3b3e48;
 }
 
 h1{
   /* font-family: 'Space Grotesk', sans-serif;
   font-weight: 700;
   font-size: 30px; */
-  font-family: 'Libre Baskerville', serif;
-  font-weight: 700;
+  /* font-family: 'Libre Baskerville', serif; */
+  /* font-family: 'Lilita One', sans-serif; */
+  /* font-family: 'Acme', sans-serif; */
+  font-family: 'Fredericka the Great', cursive;
+  /* font-weight: 700; */
   font-size: 30px;
   letter-spacing: 0.5px;
 }
