--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,11 @@ body {
   background-color: #3b3e48;
 }
 
+p{
+  font-family: 'Acme', sans-serif;
+  font-size: 30px;
+}
+
 h1{
   /* font-family: 'Space Grotesk', sans-serif;
   font-weight: 700;
@@ -30,11 +35,12 @@ h1{
   /* font-family: 'Acme', sans-serif; */
   font-family: 'Fredericka the Great', cursive;
   /* font-weight: 700; */
-  font-size: 30px;
+  font-size: 35px;
   letter-spacing: 0.5px;
 }
 
 h2{
   font-family: 'Cormorant Garamond', serif;
   font-size: 20px;
+  font-weight: 500;
 }
