--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,3 +44,27 @@ h2{
   font-size: 20px;
   font-weight: 500;
 }
+
+ul {
+  list-style: disc;
+  padding-left: 1.5rem;
+}
+
+@media (max-width: 768px) {
+  #info-container {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  #info-container {
+    display: block;
+  }
+}
+
+#date{
+  font-size: 15px;
+  /* position: absolute; */
+  margin-right: 0;
+  margin-left:auto;
+}
