--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,11 +54,23 @@ ul {
   #info-container {
     display: none;
   }
+  #title{
+    font-size: 40px;
+  }
+  h3{
+    font-size: 10px;
+  }
 }
 
 @media (min-width: 768px) {
   #info-container {
     display: block;
+  }
+  #title{
+    font-size: 70px;
+  }
+  h3{
+    font-size: 25px;
   }
 }
 
@@ -67,4 +79,24 @@ ul {
   /* position: absolute; */
   margin-right: 0;
   margin-left:auto;
+}
+
+h3{
+  font-family: 'Rubik Burned', cursive;
+  /* font-size: 25px; */
+  font-weight: 500;
+  color: white;
+}
+
+#title{
+  font-family: 'Fredericka the Great', cursive;
+  /* font-weight: 700; */
+  /* font-size: 70px; */
+  letter-spacing: 0.5px;
+}
+
+#subtitle{
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 30px;
+  font-weight: 500;
 }
